# AppToGIF

./: .gitignore  CMakeLists.txt  Debug-alias  README.md
AppToGIF_Demo/: CMakeLists.txt  DemoOpenGL.cpp  main.cpp
include/: AppToGIF.h  ffmpeg.h
src/: API.cpp  API.hpp
src/EncoderApp/: EncoderApp.cpp  EncoderApp.hpp
src/Frame/: Frame.cpp  Frame.hpp
src/FrameBuffer/: FrameBuffer.cpp  FrameBuffer.hpp
src/encoder/: Encoder.cpp  Encoder.hpp
src/errorReporting/: errorReporter.h
